test/openshift-parallel/1-073_validate_rhsso/01-assert.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: keycloak
spec:
  selector:
    deploymentConfig: keycloak
  strategy:
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 250m
        memory: 256Mi
    type: Recreate
  template:
    metadata:
      labels:
        application: keycloak
        deploymentConfig: keycloak
      name: keycloak
    spec:
      containers:
      - resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/x509/https
          name: sso-x509-https-volume
          readOnly: true
        - mountPath: /var/run/configmaps/service-ca
          name: service-ca
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: sso-x509-https-volume
        secret:
          defaultMode: 420
          secretName: sso-x509-https-secret
      - configMap:
          defaultMode: 420
          name: keycloak-service-ca
        name: service-ca
  triggers:
  - type: ConfigChange
status:
  readyReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
spec:
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: keycloak
    weight: 100
  wildcardPolicy: None
